kubernetes-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: stations
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: k8s-quiz-mainlb-bfae69efa3-1458856836.us-west-2.elb.amazonaws.com
      http:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: 
                  number: 8080
